# Projeto1_Streamlit

./: Cadastro.py  README.md  clientes.csv  pyproject.toml
pages/: Consulta.py
